--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "element-resize-event-listener",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "description": "Low performance resize event listener to HTML element.",
     "main": "lib/index.js",
     "types": "src/index.d.ts",
@@ -13,7 +13,8 @@
         "HTML element",
         "easy&lite",
         "low performance",
-        "TypeScript"
+        "TypeScript",
+        "FlowType"
     ],
     "author": "Filip Paulů <ing.fenix@seznam.cz>",
     "repository": {
